# TUMai-LaGent

./: .gitignore  LICENSE  README.md  TestLLM.py  agentprompt.md  agents.py  api.py  emailAgent.py  langchain_integration.py  main.py  maintenance_agents.py  nemo_wrapper.py  pyproject.toml  report.md  requirements.txt  supabase_client.py  test_bedrock.py  test_supabase.py
@Scratch/agentic/: __init__.py  bedrock_model.py  multi-agent-collaboration.ipynb
@Scratch/stt/: test_whisper.py
agentic/: test_agents.ipynb
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: EmailDraftDialog.tsx  MaintenanceDialog.tsx
frontend/src/components/dashboard/: DateRangeFilter.tsx  MessageStats.tsx  PropertiesOverview.tsx  RecentMessages.tsx  RevenuePerProperty.tsx  StatCard.tsx  Todos.tsx  UpcomingEvents.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useCategorizerResults.ts  useMaintenanceResults.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Index.tsx  Messages.tsx  Properties.tsx  Reports.tsx
prompts/: asset_expert.txt  categorizer.txt  email_drafter.txt  maintenance.txt  taxation.txt
stt/: __init__.py  record_audio.py  stt.py  whisper.py
supabase/migrations/: 20240321000000_create_categorizer_results.sql
