[project]
name = "tumai-lagent"
version = "0.1.0"
description = ""
authors = [
    {name = "VishiATChoudhary",email = "vishisht.choudhary@rwth-aachen.de"}
]
readme = "README.md"
requires-python = ">=3.12.4,<4.0"
dependencies = [
    "fastapi (>=0.104.0)",
    "uvicorn (>=0.24.0)",
    "langchain (>=0.1.0)",
    "langchain-community (>=0.0.10)",
    "langchain-core (==0.3.51)",
    "python-dotenv (>=1.0.0)",
    "pydantic (>=2.7.0)",
    "typing-extensions (>=4.5.0)",
    "requests (>=2.31.0)",
    "langgraph (==0.3.25)",
    "mistralai (==0.0.12)",
    "structlog (==23.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
